--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,9 @@ jobs:
         #git clone -b master https://github.com/shadowsocks/openwrt-feeds package/custom
         pushd package/openwrt-dist-luci/tools/po2lmo ; make && sudo make install ; popd
         ./scripts/feeds update -a
-        ./scripts/feeds install golang c-ares libev libopenssl libsodium mbedtls pcre libcxx
+        ./scripts/feeds install golang c-ares libev libopenssl libsodium mbedtls pcre
+        # Patch libcxxabi (https://patchwork.ozlabs.org/project/openwrt/patch/20200910032244.21726-1-rosenp@gmail.com/)
+        sed -i "s|package/libs/libcxx|\$(if \$(CONFIG_IN_SDK),feeds/base/)package/libs/libcxx|g" ./package/feeds/base/libcxxabi/Makefile
     - name: Compile
       run: |
         cd ~/sdk
@@ -125,10 +127,10 @@ jobs:
           IB_URL: https://downloads.openwrt.org/releases/19.07.4/targets/ar71xx/generic/openwrt-imagebuilder-19.07.4-ar71xx-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client bind-dig iperf3 mtr ip kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras block-mount
           INCLUDE_FILES: false
-#         - PROFILE: generic.x86_64
-#           IB_URL: https://downloads.openwrt.org/snapshots/targets/x86/64/openwrt-imagebuilder-x86-64.Linux-x86_64.tar.xz
-#           PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy ebtables kmod-ebtables-ipv6 kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-compat luci-app-samba4 luci-app-openclash stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake tcpdump dnsmasq-full -dnsmasq kmod-usb-net-rtl8152
-#           INCLUDE_FILES: true
+        - PROFILE: generic.x86_64
+          IB_URL: https://downloads.openwrt.org/snapshots/targets/x86/64/openwrt-imagebuilder-x86-64.Linux-x86_64.tar.xz
+          PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy ebtables kmod-ebtables-ipv6 kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-compat luci-app-samba4 luci-app-openclash stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake tcpdump dnsmasq-full -dnsmasq kmod-usb-net-rtl8152
+          INCLUDE_FILES: true
         - PROFILE: friendlyarm_nanopi-r2s
           IB_URL: https://downloads.openwrt.org/snapshots/targets/rockchip/armv8/openwrt-imagebuilder-rockchip-armv8.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy ebtables kmod-ebtables-ipv6 kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-compat luci-app-samba4 luci-app-openclash stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake tcpdump dnsmasq-full -dnsmasq
