--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,7 +140,7 @@ jobs:
           INCLUDE_FILES: true
         - PROFILE: d-team_newifi-d2.sun
           IB_URL: https://downloads.openwrt.org/releases/19.07.4/targets/ramips/mt7621/openwrt-imagebuilder-19.07.4-ramips-mt7621.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-ipt-nat6 kmod-tun ntfs-3g libmbedtls luci luci-app-wireguard luci-app-samba luci-app-shadowsocks luci-app-smartdns stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig mtr htop tmux nano etherwake ethtool tcpdump wpad-openssl -wpad-basic dnsmasq-full -dnsmasq
+          PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-ipt-nat6 kmod-tun ntfs-3g libmbedtls luci luci-app-wireguard luci-app-samba luci-app-shadowsocks luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn mount-utils shadowsocks-libev uhttpd bind-dig mtr htop tmux nano etherwake ethtool tcpdump wpad-openssl -wpad-basic dnsmasq-full -dnsmasq openvpn-mbedtls luci-app-openvpn zerotier
           INCLUDE_FILES: true
     steps:
     - uses: actions/checkout@master
