--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,6 +122,10 @@ jobs:
           IB_URL: https://downloads.openwrt.org/snapshots/targets/rockchip/armv8/openwrt-imagebuilder-rockchip-armv8.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra ebtables kmod-ebtables-ipv6 kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-compat luci-app-wireguard luci-app-samba4 luci-app-openclash libcap-bin luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump dnsmasq-full -dnsmasq
           INCLUDE_FILES: true
+        - PROFILE: netgear_r7800
+          IB_URL: https://downloads.openwrt.org/releases/19.07.5/targets/ipq806x/generic/openwrt-imagebuilder-19.07.5-ipq806x-generic.Linux-x86_64.tar.xz
+          PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-app-wireguard luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-app-dns-forwarder luci-app-openclash stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump wpad-openssl -wpad-basic dnsmasq-full -dnsmasq
+          INCLUDE_FILES: true 
     steps:
     - uses: actions/checkout@master
     - name: Env for Openwrt ImageBuilder
