--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
       fail-fast: false
       matrix:
         SDK_URL:
-        - https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ipq806x/generic/openwrt-sdk-21.02-SNAPSHOT-ipq806x-generic_gcc-8.4.0_musl_eabi.Linux-x86_64.tar.xz
-        - https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ipq40xx/generic/openwrt-sdk-21.02-SNAPSHOT-ipq40xx-generic_gcc-8.4.0_musl_eabi.Linux-x86_64.tar.xz
-        - https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ath79/generic/openwrt-sdk-21.02-SNAPSHOT-ath79-generic_gcc-8.4.0_musl.Linux-x86_64.tar.xz
-        - https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ramips/mt7621/openwrt-sdk-21.02-SNAPSHOT-ramips-mt7621_gcc-8.4.0_musl.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.7/targets/ipq806x/generic/openwrt-sdk-19.07.7-ipq806x-generic_gcc-7.5.0_musl_eabi.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.7/targets/ipq40xx/generic/openwrt-sdk-19.07.7-ipq40xx-generic_gcc-7.5.0_musl_eabi.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.7/targets/ar71xx/generic/openwrt-sdk-19.07.7-ar71xx-generic_gcc-7.5.0_musl.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.7/targets/ramips/mt7621/openwrt-sdk-19.07.7-ramips-mt7621_gcc-7.5.0_musl.Linux-x86_64.tar.xz
         - https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/x86/64/openwrt-sdk-21.02-SNAPSHOT-x86-64_gcc-8.4.0_musl.Linux-x86_64.tar.xz
         - https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/rockchip/armv8/openwrt-sdk-21.02-SNAPSHOT-rockchip-armv8_gcc-8.4.0_musl.Linux-x86_64.tar.xz
     steps:
@@ -77,7 +77,6 @@ jobs:
         git add .
         git commit -m "$TAG$(TZ='Asia/Shanghai' date +@%Y%m%d)"
         git push --force --quiet "https://$GITHUB_TOKEN@github.com/simonsmh/openwrt-dist.git" HEAD:$TAG
-
   buildimg:
     name: Build Openwrt Image
     needs: buildpkg
@@ -87,31 +86,31 @@ jobs:
       matrix:
         include:
         - PROFILE: asus_rt-ac58u
-          IB_URL: https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ipq40xx/generic/openwrt-imagebuilder-21.02-SNAPSHOT-ipq40xx-generic.Linux-x86_64.tar.xz
+          IB_URL: https://downloads.openwrt.org/releases/19.07.7/targets/ipq40xx/generic/openwrt-imagebuilder-19.07.7-ipq40xx-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-app-wireguard luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-app-dns-forwarder stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump wpad-openssl -wpad-basic dnsmasq-full -dnsmasq
           INCLUDE_FILES: true
         - PROFILE: asus_rt-ac58u.master
-          IB_URL: https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ipq40xx/generic/openwrt-imagebuilder-21.02-SNAPSHOT-ipq40xx-generic.Linux-x86_64.tar.xz
+          IB_URL: https://downloads.openwrt.org/releases/19.07.7/targets/ipq40xx/generic/openwrt-imagebuilder-19.07.7-ipq40xx-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client tcpdump bind-dig iperf3 mtr iptables-mod-tproxy ip shadowsocks-libev luci-app-shadowsocks luci-app-chinadns stubby shadowsocks-libev-server kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras iptables-mod-iprange iptables-mod-hashlimit kmod-ipt-nat6 kmod-ip6tables-extra kmod-ip6-tunnel miniupnpd luci-app-upnp block-mount luci-app-wireguard
           INCLUDE_FILES: false
         - PROFILE: r6220.master
-          IB_URL: https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ramips/mt7621/openwrt-imagebuilder-21.02-SNAPSHOT-ramips-mt7621.Linux-x86_64.tar.xz
+          IB_URL: https://downloads.openwrt.org/releases/19.07.7/targets/ramips/mt7621/openwrt-imagebuilder-19.07.7-ramips-mt7621.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client tcpdump bind-dig iperf3 mtr iptables-mod-tproxy ip shadowsocks-libev luci-app-shadowsocks luci-app-chinadns stubby shadowsocks-libev-server kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras iptables-mod-iprange iptables-mod-hashlimit kmod-ipt-nat6 kmod-ip6tables-extra kmod-ip6-tunnel miniupnpd luci-app-upnp block-mount ndppd
           INCLUDE_FILES: false
         - PROFILE: r6220.relay
-          IB_URL: https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ramips/mt7621/openwrt-imagebuilder-21.02-SNAPSHOT-ramips-mt7621.Linux-x86_64.tar.xz
+          IB_URL: https://downloads.openwrt.org/releases/19.07.7/targets/ramips/mt7621/openwrt-imagebuilder-19.07.7-ramips-mt7621.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client bind-dig iperf3 mtr ip kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras block-mount
           INCLUDE_FILES: false
         - PROFILE: qihoo-c301.relay
-          IB_URL: https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ath79/generic/openwrt-imagebuilder-21.02-SNAPSHOT-ath79-generic.Linux-x86_64.tar.xz
+          IB_URL: https://downloads.openwrt.org/releases/19.07.7/targets/ar71xx/generic/openwrt-imagebuilder-19.07.7-ar71xx-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client bind-dig iperf3 mtr ip kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras block-mount
           INCLUDE_FILES: false
         - PROFILE: Generic.x86_64-stable
-          IB_URL: https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/x86/64/openwrt-imagebuilder-21.02-SNAPSHOT-x86-64.Linux-x86_64.tar.xz
+          IB_URL: https://downloads.openwrt.org/releases/19.07.7/targets/x86/64/openwrt-imagebuilder-19.07.7-x86-64.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra ebtables kmod-ebtables-ipv6 kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-compat luci-app-wireguard luci-app-samba4 luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump dnsmasq-full -dnsmasq kmod-usb-net-rtl8152 kmod-usb-net-asix kmod-usb-net-asix-ax88179 mwan3 luci-app-mwan3 kmod-macvlan shadowsocks-libev luci-app-shadowsocks luci-app-openclash openvpn-mbedtls luci-app-openvpn zerotier
           INCLUDE_FILES: true
         - PROFILE: d-team_newifi-d2.sun
-          IB_URL: https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ramips/mt7621/openwrt-imagebuilder-21.02-SNAPSHOT-ramips-mt7621.Linux-x86_64.tar.xz
+          IB_URL: https://downloads.openwrt.org/releases/19.07.7/targets/ramips/mt7621/openwrt-imagebuilder-19.07.7-ramips-mt7621.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-ipt-nat6 kmod-tun ntfs-3g libmbedtls luci luci-app-wireguard luci-app-samba luci-app-shadowsocks luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn mount-utils shadowsocks-libev uhttpd bind-dig mtr htop tmux nano etherwake ethtool tcpdump wpad-openssl -wpad-basic dnsmasq-full -dnsmasq openvpn-mbedtls luci-app-openvpn zerotier
           INCLUDE_FILES: true
         - PROFILE: generic.x86_64
@@ -123,7 +122,7 @@ jobs:
           PACKAGES: ca-bundle ca-certificates block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra ebtables kmod-ebtables-ipv6 kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-compat luci-app-wireguard luci-app-samba4 luci-app-openclash libcap-bin luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump dnsmasq-full -dnsmasq
           INCLUDE_FILES: true
         - PROFILE: netgear_r7800
-          IB_URL: https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ipq806x/generic/openwrt-imagebuilder-21.02-SNAPSHOT-ipq806x-generic.Linux-x86_64.tar.xz
+          IB_URL: https://downloads.openwrt.org/releases/19.07.7/targets/ipq806x/generic/openwrt-imagebuilder-19.07.7-ipq806x-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-app-wireguard luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-app-dns-forwarder luci-app-openclash stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump wpad-openssl -wpad-basic dnsmasq-full -dnsmasq
           INCLUDE_FILES: true 
     steps:
