--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
         include:
         - PROFILE: asus_rt-ac58u
           IB_URL: https://downloads.openwrt.org/releases/21.02.0-rc3/targets/ipq40xx/generic/openwrt-imagebuilder-21.02.0-rc3-ipq40xx-generic.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-app-wireguard luci-app-samba4 luci-app-shadowsocks luci-app-smartdns luci-app-dns-forwarder stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump wpad-wolfssl -wpad-basic-wolfssl dnsmasq-full -dnsmasq
+          PACKAGES: ca-bundle ca-certificates block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-app-wireguard luci-app-samba4 luci-app-shadowsocks luci-app-smartdns luci-app-dns-forwarder stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump wpad-wolfssl -wpad-basic-wolfssl dnsmasq-full -dnsmasq miniupnpd luci-app-upnp
           INCLUDE_FILES: true
         - PROFILE: asus_rt-ac58u.master
           IB_URL: https://downloads.openwrt.org/releases/21.02.0-rc3/targets/ipq40xx/generic/openwrt-imagebuilder-21.02.0-rc3-ipq40xx-generic.Linux-x86_64.tar.xz
@@ -101,6 +101,10 @@ jobs:
         - PROFILE: netgear_r6220.relay
           IB_URL: https://downloads.openwrt.org/releases/21.02.0-rc3/targets/ramips/mt7621/openwrt-imagebuilder-21.02.0-rc3-ramips-mt7621.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-wolfssl -wpad-basic-wolfssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client bind-dig iperf3 mtr ip kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras block-mount
+          INCLUDE_FILES: false
+        - PROFILE: qihoo_c301
+          IB_URL: https://downloads.openwrt.org/releases/21.02.0-rc3/targets/ath79/generic/openwrt-imagebuilder-21.02.0-rc3-ath79-generic.Linux-x86_64.tar.xz
+          PACKAGES: ca-bundle ca-certificates block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-app-wireguard luci-app-samba4 luci-app-shadowsocks luci-app-smartdns luci-app-dns-forwarder stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump wpad-wolfssl -wpad-basic-wolfssl dnsmasq-full -dnsmasq miniupnpd luci-app-upnp
           INCLUDE_FILES: false
         - PROFILE: qihoo_c301.relay
           IB_URL: https://downloads.openwrt.org/releases/21.02.0-rc3/targets/ath79/generic/openwrt-imagebuilder-21.02.0-rc3-ath79-generic.Linux-x86_64.tar.xz
@@ -116,7 +120,7 @@ jobs:
           INCLUDE_FILES: true
         - PROFILE: friendlyarm_nanopi-r2s
           IB_URL: https://downloads.openwrt.org/releases/21.02.0-rc3/targets/rockchip/armv8/openwrt-imagebuilder-21.02.0-rc3-rockchip-armv8.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra ebtables kmod-ebtables-ipv6 kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-compat luci-app-wireguard luci-app-samba4 luci-app-openclash libcap-bin luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump dnsmasq-full -dnsmasq
+          PACKAGES: ca-bundle ca-certificates block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra ebtables kmod-ebtables-ipv6 kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-compat luci-app-wireguard luci-app-samba4 luci-app-openclash libcap-bin luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump dnsmasq-full -dnsmasq miniupnpd luci-app-upnp
           INCLUDE_FILES: true
         - PROFILE: netgear_r7800
           IB_URL: https://downloads.openwrt.org/releases/21.02.0-rc3/targets/ipq806x/generic/openwrt-imagebuilder-21.02.0-rc3-ipq806x-generic.Linux-x86_64.tar.xz
