--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,7 +104,7 @@ jobs:
           INCLUDE_FILES: false
         - PROFILE: qihoo_c301
           IB_URL: https://downloads.openwrt.org/releases/21.02.0-rc3/targets/ath79/generic/openwrt-imagebuilder-21.02.0-rc3-ath79-generic.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-app-wireguard luci-app-samba4 luci-app-shadowsocks luci-app-smartdns luci-app-dns-forwarder stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake ethtool tcpdump wpad-wolfssl -wpad-basic-wolfssl dnsmasq-full -dnsmasq miniupnpd luci-app-upnp
+          PACKAGES: ca-bundle ca-certificates curl luci luci-app-wireguard luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn uhttpd knot-dig wpad-wolfssl -wpad-basic-wolfssl
           INCLUDE_FILES: false
         - PROFILE: qihoo_c301.relay
           IB_URL: https://downloads.openwrt.org/releases/21.02.0-rc3/targets/ath79/generic/openwrt-imagebuilder-21.02.0-rc3-ath79-generic.Linux-x86_64.tar.xz
