--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,7 +120,7 @@ jobs:
           INCLUDE_FILES: true
         - PROFILE: friendlyarm_nanopi-r2s
           IB_URL: https://downloads.openwrt.org/releases/22.03.0-rc4/targets/rockchip/armv8/openwrt-imagebuilder-22.03.0-rc4-rockchip-armv8.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates block-mount usbutils coreutils curl iperf3 knot-dig mtr htop ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun ntfs-3g luci luci-compat luci-app-wireguard luci-app-samba4 luci-app-openclash kmod-inet-diag libcap-bin luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd etherwake dnsmasq-full -dnsmasq zerotier tailscale
+          PACKAGES: ca-bundle ca-certificates block-mount usbutils curl iperf3 knot-dig mtr htop ip-full iptables-mod-tproxy iptables-mod-extra kmod-usb-storage-extras kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun ntfs-3g luci luci-compat luci-app-samba4 luci-app-openclash kmod-inet-diag libcap-bin luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd etherwake dnsmasq-full -dnsmasq zerotier tailscale
           INCLUDE_FILES: true
         - PROFILE: netgear_r7800
           IB_URL: https://downloads.openwrt.org/releases/22.03.0-rc4/targets/ipq806x/generic/openwrt-imagebuilder-22.03.0-rc4-ipq806x-generic.Linux-x86_64.tar.xz
