--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
     - name: Free Disk Space
       uses: jlumbroso/free-disk-space@main
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
     - name: Env for Openwrt SDK
       run: sudo apt install -y libev-dev libc-ares-dev libudns-dev libncurses-dev
     - name: Download Openwrt SDK
